# ak-core

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  bootstrap.sh  configure  configure.ac  default.nix  flake.nix  overlay.nix
.github/workflows/: lint.yml  makefile.yml  test-flake-build.yml  test.yml
build-aux/: ltmain.sh
doc/sh-scripts/: Makefile.am  Makefile.in  wsmerge.1
m4/: ah_ifndef.m4  ak_assert_file.m4  ak_check_lib.m4  ak_check_library.m4  ak_cxx_gnu_unique.m4  ak_dirvar.m4  ak_prog_missing.m4  ak_prog_nm.m4  ak_prog_path.m4  ak_prog_perl.m4  ak_prog_readelf.m4  ak_prog_shellcheck.m4  autom4te.m4
src/: Makefile.am  Makefile.in
src/awk-scripts/: Makefile.am  Makefile.in  dedup
src/jq/: Makefile.am  Makefile.in  cdb-merge.jq  cdbmerge.jq  list.jq
src/m4/: elf.m4  pred-scripts.m4  util.m4
src/m4sugar/: Makefile.am  Makefile.in  ak_library_shared_p.m4  elf.m4  gccopts.m4  hashmap.m4  m4sh-util.m4  pred-scripts.m4  regect-negative-opts  util.m4
src/m4sugar/elf/: sections.m4
src/m4sugar/test/: Makefile.am  Makefile.in  greet.c  howdy.c
src/sh-scripts/: .gitignore  Makefile.am  Makefile.in  ak-ifnames  ccjs  cdecls  cdeps  cincludes  cppabi11p  cuts  depgraph  detect-cxx-std  displays  drop-until  dt_entry.m4sh  dump-makevars  elf-cflags  exprq  gen-la  get-m4-files  get-m4-path  has-programs  iface_ips_json  is-elf-cu.m4sh  is-elf-xx.m4sh  joinlines  json-syms  lines-prefix  lorder  mangle  needs  needs.m4sh  nextlink  racu  rpath.m4sh  sha256dir  soname.m4sh  symlink-samedir-p  trim  version2json  (+2 more)
src/sh-scripts/ccjs/: Makefile.am  Makefile.in  add.bash  ccjs  ccjs_add  ccjs_remove  main.bash
src/sh-scripts/ccjs/tests/: add.bats  ccjs.bats  remove.bats  setup_suite.bash
src/sh-scripts/ref/: getopts-example1.sh  getopts_long-example1.sh  getopts_long.sh
src/sh-scripts/test/: .gitignore  Makefile.am  Makefile.in  cdeps-a.c  cdeps-a.h  cdeps-b.h  cdeps-c.c  cdeps-c.h  hello.c  test-cdeps.sh  test-gen-la.sh  test-is-elf-cu.sh
src/sqlite/: library.sql  scrape_json_for_sql.sh
src/zsh-scripts/: Makefile.am  Makefile.in  has-stls-so  is-elf-ar  is-elf-cu  is-elf-so  scomm  syms
