# ============================================================================ #
#
#
#
# ---------------------------------------------------------------------------- #

jqdir = $(datadir)/jq

dist_jq_DATA = list.jq cdbmerge.jq


# ---------------------------------------------------------------------------- #
#
#
#
# ============================================================================ #
