# ============================================================================ #
#
#
#
# ---------------------------------------------------------------------------- #

# TODO: Inline helper scripts.
ccjs: main.bash
	cp $< $@

bin_SCRIPTS = ccjs ccjs-wrap


# ---------------------------------------------------------------------------- #
#
#
#
# ============================================================================ #
